--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="photo-section">
-        <img src="./terim.jpeg" alt="Tek Fotoğraf" />
+        <img src="./terim.jpg" alt="Tek Fotoğraf" />
     </section>
 
     <section id="anket">
