--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benim Sitem</title>
+    <title>Talha'nın Blogu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -95,12 +95,12 @@
         <div class="popup-content">
             <span class="close-button">&times;</span>
             <h2>Hoş Geldiniz!</h2>
-            <p>Siteme hoş geldiniz. Burada kendimi tanıtıyorum ve bağlantılarımı paylaşıyorum.</p>
+            <p>Bloguma Hoşgeldiniz. Burada projelerimi paylaşıyorum.</p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Benim Sitem. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Talha'nın Blogu. Tüm hakları saklıdır.</p>
     </footer>
 
     <script src="script.js"></script>
